Revision history for PCRD

{{$NEXT}}
	- Fix calculation of cpu usage

0.001 - 2025-05-15
	- First version
